2015-06-08 Fixed issue with scoring in Line Number module
2015-06-08 Added new property Don't show ranges to Line Number module
2015-06-08 Fixed issue with parsing HTML tags in Text Selection module
2015-06-03 Fixed issue with displaying eKeyboard in disabled gaps in eKeyboard module
2015-06-03 Fixed issue with missing signs in Text Selection module
2015-06-03 Added assetsService and handling SVG files in Image module
2015-06-02 Fixed issue with duplicating gaps when elements from Multiple gap are dragged in Editor
2015-06-02 Added new command isOrderCorrect to Shape Tracing module
2015-06-01 Added enable, disable commands and isDisabled property in Image Gap and Image Source modules
2015-06-01 Fixed issue with check and reset in Basic Math Gaps module
2015-05-29 Fixed issue with blocking scoring after show answers and reset in Connection module
2015-05-28 Added new way to close full screen image in Zoom Image module
2015-05-28 Added commutativy property to Writing Calculations module
2015-05-28 Added commands show and hide to Shape module
2015-05-27 Fixed issue with input align in Writing Calculations module
2015-05-27 Fixed issue with draggable element in editor in Ordering module
2015-05-27 Fixed adding custom classes in editor in IWB Toolbar module
2015-05-27 Fixed issue with text parsing and state in Text Selection module
2015-05-25 Fixed counting errors in Count and Graph module
2015-05-25 Fixed issue with ShowAnswers in SourceList module
2015-05-25 Fixed issue with changing frames in Image Viewer module
2015-05-22 Fixed issue with reset in ImageSource and SourceList modules
2015-05-20 Added new property gap type and drag feature in "Basic Math Gaps" module
2015-05-20 Fixed issue with nextStep command in Slider module
2015-05-20 Added isDelayed property to eventBus addEventListener API
2015-05-20 Added getModulesScore() command to Limited Check module
2015-05-20 Fixed issue with dragging element to the same MultipleGap