@@ -1,3 +1,4 @@
+2015-06-09 Added new properties 'Number of repetitions' and 'ID repeated element'
 2015-06-08 Fixed issue with scoring in Line Number module
 2015-06-08 Added new property Don't show ranges to Line Number module
 2015-06-08 Fixed issue with parsing HTML tags in Text Selection module
